gRPC-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-demo
  namespace: grpc
  annotations:
    konghq.com/protocols: grpc,grpcs
    #kubernetes.io/ingress.class: kong
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: grpcbin
            port:
              number: 9001
