opa-ingress-int-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opa-ingress
  namespace: opa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: opa.dms.int-prod.usw2.ficoanalyticcloud.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: opa
            port:
              number: 8181
  tls:
  - hosts:
    - opa.dms.int-prod.usw2.ficoanalyticcloud.com
status: 
   loadBalancer: 
     ingress: 
       - hostname: k8s-ingressn-ingressn-a70168fe58-fcdef8bedc8110f7.elb.us-west-2.amazonaws.com
