opa-ingress-sandbox.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opa-ingress
  namespace: opa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: opaakash.dms.sandbox.usw2.ficoanalyticcloud.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: opa
            port:
              number: 8181
  tls:
  - hosts:
    - opaakash.dms.sandbox.usw2.ficoanalyticcloud.com
status: 
   loadBalancer: 
     ingress: 
       - hostname: k8s-ingressn-ingressn-6de671a808-d0e38473329d0a44.elb.us-west-2.amazonaws.com
